[package]
name = "psfparser"
version = "0.1.1"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "A PSF reader written in Rust"
readme = "README.md"
repository = "https://github.com/rahulk29/psfparser"
license = "BSD-3-Clause"
exclude = ["/examples"]

[dependencies]
anyhow = "1.0.66"
pest = "2.4.1"
pest_derive = "2.4.1"
float_eq = "1"

[profile.release]
lto = "fat"
codegen-units = 1
